/*
 * $Id: ChangeLog,v 1.1657 2003/11/05 03:32:46 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2003-11-05 08:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  ! contrib/libct/Makefile.bc
    ! minor fix

2003-11-05 04:24 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/include/hbdefs.h
  * xharbour/include/hbrddcdx.h
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
  * xharbour/source/rdd/dbfcdx/dbfcdx1.h
    ! removed non ISO C standard construction which cannot be compiled
      by some compilers
    ! adding some missed casting to make BCC happy
    ! all internal function declared as static

2003-11-04 10:11 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rdd/dbfcdx/dbfcdx1.h
    - Removed redundant macro.
  * source/rdd/dbfcdx/dbfcdx1.c
    + Added missing void in function definition.

2003-11-04 09:57 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbdefs.h
  * include/hbrddcdx.h
  * source/rdd/dbfcdx/dbfcdx1.c
    ! Fixed compilation errors.

    /* Przemek I was forced to modify HB_GET_SORTDBL() to accept value to assign to, because other wise we get something like:

         SomeFunction( { some code block is invalis as an expression } )

       Can you please review my change to see if it's ok?
    */

  * tests/rddspeed.prg
    * Uncommented #define TST_NUM

2003-11-04 01:55 UTC-0800 Brian Hays <bhays@abacuslaw.com>
  * contrib/rdd_ads/ads1.c
    * added an optimization for ordKeyNo() and dbOrderInfo(DBOI_POSITION)

  * contrib/rdd_ads/doc/en/readme.txt
    * added a page about speed and performance issues.
  * contrib/rdd_ads/doc/en/adsfunc.txt
    * fixed docs for AdsGetRelKeyPos (it only operates on the current index)
    * added docs for AdsSetRelKeyPos, AdsTestRecLocks( <lOnOff> ),
         AdsIsExprValid(cExp) and AdsGetLastError()

