@@ -1,5 +1,5 @@
 #
-# $Id: global.cf,v 1.2 2003/09/08 12:56:52 druzus Exp $
+# $Id: global.cf,v 1.3 2003/11/04 08:31:03 druzus Exp $
 #
 
 GRANDP = ../../
@@ -11,7 +11,6 @@ HB_DB_DRIVERS=\
 	dbfcdx \
 	dbffpt \
 	dbfdbt \
-	dbfcdxold \
 
 ifeq ($(HB_BIN_COMPILE),)
 HB_BIN_COMPILE := $(TOP)$(ROOT)source/compiler/$(ARCH)
