@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1657 2003/11/05 03:32:46 druzus Exp $
+ * $Id: ChangeLog,v 1.1658 2003/11/05 09:55:36 lculik Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,15 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-11-05 14:37 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
+  * xharbour/include/hbdefs.h
+    ! HB_{PUT,GET}_LE_DOUBLE macros restored. I've forgot I used them
+      in DBFFPT
+  * xharbour/config/global.cf
+    - removed DBFCDXOLD lib - this was only for my tests to compare
+      new and old CDX RDD and should never be in CVS - sorry
+
 2003-11-05 08:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
   ! contrib/libct/Makefile.bc
     ! minor fix
